# mergeshare

.cursor/rules/: muti-com.mdc
multiqueue-shm/: .gitignore  CMakeLists.txt  COMPLETE_TESTING_SUMMARY.md  COMPONENT_STATUS.md  CONTRIBUTING.md  IMPLEMENTATION_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST_SUMMARY.md  LICENSE  NEW_ARCHITECTURE_DESIGN.md  PHASE0_COMPLETION_REPORT.md  PRODUCER_LOGIC_ANALYSIS.md  PROJECT_INITIALIZATION_SUMMARY.md  PROJECT_STATS.md  PR_TEMPLATE.md  README.md  RUNTIME_ARCHITECTURE_REDESIGN.md  TESTING_COMPLETE.md  TEST_SUMMARY.md  project_structure.txt  run_tests.sh
multiqueue-shm/cmake/: FindGoogleTest.cmake
multiqueue-shm/commit/: 2025-11-18_phase0_complete.md  2025-11-18_project_init.md  2025-11-19_phase1_stress_test.md  2025-11-19_phase2_complete.md  2025-11-19_phase3_complete.md  2025-11-19_phase4_complete.md  2025-11-20_multicast_refactor_complete.md  2025-11-20_multicast_refactor_plan.md  2025-11-24_all_tests_summary.md  2025-11-24_code_cleanup.md  2025-11-24_complete_integration_testing.md  2025-11-24_implementation_complete.md  2025-11-24_integration_testing_complete.md  2025-11-24_multicast_design_complete.md  2025-11-24_multicast_implementation_complete.md  2025-11-24_multicast_multiprocess_complete.md  2025-11-24_multiprocess_integration_complete.md  2025-11-24_multiprocess_priority_design.md  2025-11-24_multiprocess_testing_complete.md  2025-11-24_phase1_and_phase2_testing_complete.md  2025-11-24_phase1_complete.md  2025-11-24_phase25_phase26_implementation.md  2025-11-24_phase2_complete.md  2025-11-24_shmmanager_complete.md
multiqueue-shm/core/: CMakeLists.txt  README.md
multiqueue-shm/core/include/multiqueue/: block.hpp  blocks.hpp  buffer_allocator.hpp  buffer_metadata.hpp  buffer_pool.hpp  buffer_ptr.hpp  config.hpp  global_registry.hpp  message.hpp  metadata.hpp  msgbus.hpp  multiqueue_shm.hpp  port.hpp  port_queue.hpp  queue_manager.hpp  ring_queue.hpp  runtime.hpp  scheduler.hpp  shm_manager.hpp  timestamp.hpp  timestamp_sync.hpp  types.hpp
multiqueue-shm/core/include/multiqueue/blocks/: amplifier.hpp  null_sink.hpp  null_source.hpp
multiqueue-shm/core/src/: ring_queue_impl.hpp  timestamp_sync_impl.hpp
multiqueue-shm/design/: ARCHITECTURE_SUMMARY.md  DETAILED_DESIGN.md  DETAILED_DESIGN_PART2.md  MULTICAST_PORT_QUEUE_DESIGN.md  MULTIPROCESS_BUFFER_MANAGEMENT.md  MULTIPROCESS_DESIGN_V2.md  MULTISTREAM_SYNC_DESIGN.md  README.md
multiqueue-shm/docs/: api_reference.md  architecture.md  development_plan.md  getting_started.md  multicast_design.md  python_api.md  task_breakdown.md  test_strategy.md
multiqueue-shm/examples/: CMakeLists.txt
multiqueue-shm/examples/cpp/: README.md
multiqueue-shm/examples/python/: README.md
multiqueue-shm/logger/: CMakeLists.txt  README.md
multiqueue-shm/logger/include/multiqueue/: mp_logger.hpp
multiqueue-shm/old_impl/cpp/: CMakeLists.txt  test_compile.cpp  test_config.cpp  test_logger.cpp  test_metadata.cpp  test_ringqueue.cpp  test_shm_open.cpp  test_stress.cpp  test_timestamp_sync.cpp
multiqueue-shm/old_impl/python-binding/src/: multiqueue_python.cpp
multiqueue-shm/python-binding/: CMakeLists.txt
multiqueue-shm/tests/: CMakeLists.txt
multiqueue-shm/tests/cpp/: CMakeLists.txt  test_block.cpp  test_buffer_allocator.cpp  test_buffer_metadata.cpp  test_buffer_pool.cpp  test_compile.cpp  test_continuous_stream.cpp  test_debug_alloc.cpp  test_integration.cpp  test_integration_complete.cpp  test_integration_complete_streams.cpp  test_metadata.cpp  test_multicast_simple.cpp  test_multicast_simple2.cpp  test_multiprocess.cpp  test_multiprocess_advanced.cpp  test_multiprocess_integration.cpp  test_multiprocess_multicast.cpp  test_port_queue.cpp  test_port_queue_multicast.cpp  test_ringqueue.cpp  test_runtime_simple.cpp  test_shm_manager.cpp  test_shm_manager_debug.cpp  test_stress.cpp  test_timestamp.cpp  test_timestamp_sync_streams.cpp  test_types.cpp
multiqueue-shm/tests/python/: cleanup_shm.py  test_minimal.py  test_ringqueue.py  test_simple.py  test_threading.py
multiqueue-shm/tracy-integration/: CMakeLists.txt  README.md
multiqueue-shm/tracy-integration/include/: tracy_wrapper.hpp
sharedatastream/: .gitignore  CMakeLists.txt  COMPILE_STRATEGY.md  ENCODING_FIX_README.md  ENCODING_FIX_SUMMARY.md  main.cpp  readme.md  setup.py  setup.py.old  shared_ring_queue.cpp  shared_ring_queue.cpp.bak  shared_ring_queue.hpp  shared_ring_queue.hpp.bak  shared_ring_queue1.cpp  shared_ring_queue1.hpp  test_sinewave_input.cpp  test_sinewave_output.cpp  testr.cpp  testw.cpp
sharedatastream/python/: processor_decorator.py.bak  run_sinewave_chain.sh
sharedatastream/python/processor_decorator/: __init__.py  processor_decorator.py  shared_ring_queue.cp312-win_amd64.pyd
sharedatastream/python/processor_decorator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sharedatastream/python/processor_decorator/test/: spectrum_shm_producer.py  spectrum_shm_ws_server.py  test_processor.py  test_shared_ring_queue.py  test_sinewave_halfamp.py  test_sinewave_input.py  test_sinewave_opencv.py  test_sinewave_output.py
sharedatastream/python/processor_decorator/test/test2/: .eslintrc.js  1.txt  package-lock.json  package.json
sharedatastream/python/processor_decorator/test/test2/src/: App.vue
sharedatastream/python/processor_decorator/test/test2/src/components/: NativeWebGLSpectrumChart.vue  NativeWebGLWaterfall.vue  NativeWebGLWaterfallAllGpu.vue  SpectrumChart.vue  SpectrumDataProvider.vue  WebGLSpectrumChart.vue
sharedatastream/python/processor_decorator/test/vue-test/: README.md  package.json  tsconfig.json
sharedatastream/python/processor_decorator/test/vue-test/src/: App.vue
sharedatastream/python/processor_decorator/test/vue-test/src/components/: NativeWebGLSpectrumChart.vue  NativeWebGLWaterfall.vue  NativeWebGLWaterfallAllGpu.vue  SpectrumDataProvider.vue  test-webgl.vue  testwebgl.vue.bak
