# Python Binding CMakeLists.txt

message(STATUS "Configuring Python binding (pybind11)")

# 查找 Python
find_package(Python3 COMPONENTS Interpreter Development QUIET)

if(NOT Python3_FOUND)
    message(WARNING "Python3 not found, skipping Python binding")
    message(STATUS "  Install Python3 development package:")
    message(STATUS "    macOS: brew install python3")
    message(STATUS "    Ubuntu: sudo apt install python3-dev")
    return()
endif()

message(STATUS "Python3 found: ${Python3_VERSION}")
message(STATUS "  Interpreter: ${Python3_EXECUTABLE}")
message(STATUS "  Include: ${Python3_INCLUDE_DIRS}")

# 查找 pybind11
find_package(pybind11 QUIET)

if(NOT pybind11_FOUND)
    message(WARNING "pybind11 not found, skipping Python binding")
    message(STATUS "  Install pybind11:")
    message(STATUS "    pip3 install pybind11")
    message(STATUS "    Or: brew install pybind11 (macOS)")
    message(STATUS "    Or: sudo apt install pybind11-dev (Ubuntu)")
    return()
endif()

message(STATUS "pybind11 found: ${pybind11_VERSION}")

# TODO: 阶段4 - 实现 Python 绑定
# 这里将添加 pybind11_add_module 来构建 Python 扩展模块

message(STATUS "Python binding configuration completed (implementation pending)")
message(STATUS "  Python binding will be implemented in Phase 4")

